--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "start-prod": "npm run build && serve -s ./build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -49,6 +50,7 @@
     },
     "devDependencies": {
         "eslint": "^8.14.0",
-        "prettier": "^2.6.2"
+        "prettier": "^2.6.2",
+        "serve": "^13.0.2"
     }
 }
